Fix/ the overflowing issue

--- a/src/content/header/Header.scss
+++ b/src/content/header/Header.scss
@@ -8,6 +8,7 @@
 
     picture img {
         width: 800px;
+        max-width: 100svw;
         height: auto;
         border-radius: 5%;
     }
